Fixes spacing and padding

--- a/client/stylesheets/splash.import.styl
+++ b/client/stylesheets/splash.import.styl
@@ -3,7 +3,8 @@
   padding-right 15px
 
 .jumbotron
-  margin-top 20px
+  margin-top 0
+  padding 10px 0
   background #FFF
   p,
   h4
